nana_ws/log/build_2025-09-10_17-30-31/nana_core/stderr.log
  File "/home/nadeem/nana_project/nana_ws/install/nana_core/lib/python3.12/site-packages/nana_core/armrpm_node.py", line 33
    self.turnSpeed: float = 0.0ssss
                              ^
SyntaxError: invalid decimal literal

